--- a/app/views/notifications_mailer/product_purchased_email.text.slim
+++ b/app/views/notifications_mailer/product_purchased_email.text.slim
@@ -33,7 +33,7 @@
 = "\r\n"
 | Current Status: #{@warehouse_name}
 = "\r\n"
-| Order Item: #{@item_name}
+| Sale Item: #{@item_name}
 = "\r\n"
 = "\r\n"
 | If you have any questions or need to make changes, feel free to contact us at support@handsomecake.com
