--- a/app/views/notifications_mailer/warehouse_changed_email.text.slim
+++ b/app/views/notifications_mailer/warehouse_changed_email.text.slim
@@ -38,7 +38,7 @@
 | New Status: #{@new_status}
 = "\r\n"
 = "\r\n"
-| Order Item: #{@item_name}
+| Sale Item: #{@item_name}
 = "\r\n"
 = "\r\n"
 - if @tracking_number.present?
