--- a/app/views/products/_product_purchases.html.slim
+++ b/app/views/products/_product_purchases.html.slim
@@ -27,11 +27,11 @@
             td = purchase.amount
             td
               ul.list-none.mg-0.pd-0
-                - purchase.purchased_products.each do |purchased_product|
+                - purchase.purchase_items.each do |purchase_item|
                   li
-                    a.no-events href=purchased_product_path(purchased_product)
+                    a.no-events href=purchase_item_path(purchase_item)
                       i.icn 📦
-                      | #{purchased_product.warehouse.name}
-                      - if purchased_product.expenses
+                      | #{purchase_item.warehouse.name}
+                      - if purchase_item.expenses
                         | — expenses: $
-                        .mono.inline = format_money purchased_product.expenses
+                        .mono.inline = format_money purchase_item.expenses
