--- a/app/views/purchase_items/_form.html.slim
+++ b/app/views/purchase_items/_form.html.slim
@@ -1,5 +1,5 @@
-= form_with(model: purchased_product) do |form|
-  = render "_shared/notice-err", model: purchased_product
+= form_with(model: purchase_item) do |form|
+  = render "_shared/notice-err", model: purchase_item
 
   = form.label :warehouse
   = form.collection_select(:warehouse_id, Warehouse.order(:name), :id, :name, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
@@ -7,8 +7,8 @@
   = form.label :purchase
   = form.collection_select(:purchase_id, @purchases || [], :id, :full_title, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
   
-  = form.label :product_sale
-  = form.collection_select(:product_sale_id, @product_sales || [], :id, :title_for_select, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
+  = form.label :sale_item
+  = form.collection_select(:sale_item_id, @sale_items || [], :id, :title_for_select, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
 
   = form.label :length
   = form.text_field :length
@@ -34,10 +34,10 @@
   = form.label :shipping_company
   = form.collection_select(:shipping_company_id, @shipping_companies || [], :id, :name, { class: "select", include_blank: true })
 
-  - if purchased_product.images.attached?
+  - if purchase_item.images.attached?
     br
     .card.flex.wrap.gap.even-pd.items-end
-      - purchased_product.images.each do |image|
+      - purchase_item.images.each do |image|
         .form__img-card
           = form.hidden_field :images, multiple: true, value: image.signed_id
           = render "_shared/preloadable_img", src: image.representation(:thumb).url
@@ -49,7 +49,7 @@
   = form.label :images 
   = form.file_field :images, multiple: true
 
-  - if params[:redirect_to_product_sale].present?
-    = form.hidden_field :redirect_to_product_sale, value: true
+  - if params[:redirect_to_sale_item].present?
+    = form.hidden_field :redirect_to_sale_item, value: true
 
   = form.submit
