--- a/app/views/purchases/_purchase.html.slim
+++ b/app/views/purchases/_purchase.html.slim
@@ -7,13 +7,13 @@ tr.hoverable id="#{dom_id purchase}" data-action="click->table#goTo" data-table-
     - if purchase.edition.present?
       | → #{purchase.edition.title}
     ul.v-align.ml-s.list-none
-      - if purchase.purchased_products.size == purchase.amount
-        - purchase.purchased_products.group_by(&:warehouse).each do |warehouse, pp|
+      - if purchase.purchase_items.size == purchase.amount
+        - purchase.purchase_items.group_by(&:warehouse).each do |warehouse, pp|
           li #{warehouse.name}: #{pp.count}
       - else
-        li <mark class="smaller">Warehouses: #{purchase.purchased_products.size} / Purchased: #{purchase.amount}</mark>
-        - if purchase.purchased_products.present?
-          - purchase.purchased_products.group_by(&:warehouse).each do |warehouse, pp|
+        li <mark class="smaller">Warehouses: #{purchase.purchase_items.size} / Purchased: #{purchase.amount}</mark>
+        - if purchase.purchase_items.present?
+          - purchase.purchase_items.group_by(&:warehouse).each do |warehouse, pp|
             li #{warehouse.name}: #{pp.count}
   td.break-words = purchase.supplier.title
   td.right.mono = format_money purchase.item_price
