--- a/app/views/sales/_link_btn.html.slim
+++ b/app/views/sales/_link_btn.html.slim
@@ -1,4 +1,4 @@
-- if (sale.active? || sale.completed?) && sale.has_unlinked_product_sales?
-  a.btn href=link_purchased_products_sale_path
+- if (sale.active? || sale.completed?) && sale.has_unlinked_sale_items?
+  a.btn href=link_purchase_items_sale_path
     i.icn 🔗
     | Link with purchases
