Feat: Add Tailwind CSS integration and enhance user management features - Introduced Tailwind CSS for styling - Updated application layout to include Tailwind stylesheet - Added user first and last name fields to the User model - Created UsersController for user management with CRUD actions - Refactored authentication and session handling - Improved password reset flow and notifications

--- a/app/views/_shared/_notice-err.html.slim
+++ b/app/views/_shared/_notice-err.html.slim
@@ -2,7 +2,7 @@
   article.notice.is-error
     header
       i.icn 🙀
-      | Sorry, we can't save this. Fix the errors and try again:
+      | Fix errors and try again
       i.icn 🙀
     ul
       - model.errors.each do |error|
