--- a/app/views/passwords/new.html.slim
+++ b/app/views/passwords/new.html.slim
@@ -1,8 +1,11 @@
 h1 Forgot your password?
 
-= tag.div(flash[:alert], style: "color:red") if flash[:alert]
+= render "_shared/notice"
 
 = form_with url: passwords_path do |form|
   = form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address]
-  br
   = form.submit "Email reset instructions"
+
+.flex.space-x-1.text-sm
+  = link_to "Create new account", sign_up_path
+  = link_to "Already have an account?", sign_in_path
