--- a/app/views/suppliers/show.html.slim
+++ b/app/views/suppliers/show.html.slim
@@ -6,14 +6,10 @@ main
   table.vertical(role="grid")
     thead
       tr
-        th
-          | ID
-        th
-          | Title
-        th
-          | Created
-        th
-          | Updated
+        th ID
+        th Title
+        th Created
+        th Updated
     tbody
       = render @supplier
 
