--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -23,29 +23,8 @@
           th.right Shipping
           th.right Actions
         tbody
-          - @purchase_items.each do |pp|
-            tr(
-              class="hoverable"
-              data-action="click->table#goTo"
-              data-table-url-param=purchase_item_path(pp)
-            )
-              = render "_shared/move_to_warehouse/td", id: pp.id
-              td.text-center
-                = render "_shared/preloadable_img", src: thumb_url(pp), class_names: "zoomable", width: 100
-              td
-                = pp.purchase.product.full_title
-                - if pp.purchase.edition.present?
-                  | → #{pp.purchase.edition.title}
-              td
-                - if pp.sale
-                  = link_to pp.sale.title, pp.sale, class: "no-events"
-              td.mono = format_item_size(pp)
-              td.mono.right = pp.weight
-              td.mono.right = format_money pp.expenses
-              td.mono.right = format_money pp.shipping_price
-              td.actions
-                = render "_shared/action-destroy", route: purchase_item_path(pp)
-                = render "_shared/action-edit", route: edit_purchase_item_path(pp)
+          - @purchase_items.each do |item|
+            = render "purchase_item", item:
       = paginate @purchase_items
     - else
-      = render "_shared/search-results-empty"    
+      = render "_shared/search-results-empty"
