--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -52,7 +52,8 @@ html
               li = link_to "Shapes", shapes_path
               li = link_to "Sizes", sizes_path
               .pb-1
-              li = link_to "Users", users_path
+              - if current_user.admin?
+                li = link_to "Users", users_path
               li = link_to "Log Out", log_out_path, method: :post, data: { confirm: "Are you sure you want to log out?", turbo_method: :post }
     main.main
       = yield
