Style: Update layout styles for unauthenticated page

--- a/app/views/layouts/unauthenticated.html.slim
+++ b/app/views/layouts/unauthenticated.html.slim
@@ -11,7 +11,7 @@ html
     = javascript_importmap_tags
     = turbo_refresh_method_tag :morph
     = turbo_refresh_scroll_tag :preserve
-  body.flex.flex-col.items-center.justify-center.min-h-screen.p-4.md:bg-gray-100.md:dark:bg-gray-800.dark:text-gray-400
-    .bg-white.w-full.max-w-2xl.md:rounded-2xl.p-4.dark:bg-gray-700
+  body.flex.flex-col.items-center.justify-center.min-h-screen.p-4.bg-gray-200/30
+    .bg-white.w-full.max-w-2xl.md:border.border-gray-400/10.rounded-2xl.p-4.dark:bg-gray-400/4
       = yield
     .text-xs.font-bold.text-gray-400.mt-3 StoreMate
