--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,1 +1,68 @@
 @import "tailwindcss";
+
+/* To rule them all */
+@layer base {
+  html {
+    @apply antialiased scroll-smooth;
+  }
+
+  @theme {
+    --font-icn:
+      "Noto Emoji", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+      "Noto Color Emoji";
+  }
+}
+
+/* Navigation */
+@layer base {
+  nav[role="navigation-main"],
+  nav[role="navigation-main"] ul {
+    @apply flex items-center;
+  }
+
+  /* Align apart logo and menu */
+  nav[role="navigation-main"] {
+    @apply justify-between;
+  }
+
+  /* Style nav links as buttons on hover */
+  nav[role="navigation-main"] a {
+    @apply inline-block px-2 py-2 rounded no-underline text-gray-600 transition-all duration-200;
+  }
+
+  nav[role="navigation-main"] a:is(:hover, :active, :focus) {
+    @apply no-underline hover:bg-gray-100 hover:text-gray-900;
+  }
+
+  nav[role="navigation-dropdown"] {
+    @apply relative;
+  }
+
+  /* Burger button */
+  nav[role="navigation-dropdown"] > button {
+    @apply p-2 rounded hover:bg-gray-100 transition-all duration-200 cursor-pointer;
+  }
+
+  /* Dropdown container */
+  nav[role="navigation-dropdown"] ul {
+    @apply flex flex-col items-start absolute right-0 top-full w-44 pt-5 pl-4 pb-7 bg-white border border-gray-200 rounded-md shadow-md opacity-0 invisible transition-all duration-200;
+  }
+
+  nav[role="navigation-dropdown"]:hover ul {
+    @apply opacity-100 visible;
+  }
+
+  nav[role="navigation-dropdown"] > ul > li > a {
+    @apply px-4 py-2 hover:bg-gray-100;
+  }
+}
+
+@layer components {
+  .icn {
+    @apply font-normal font-icn;
+  }
+
+  .icn.is-link {
+    @apply align-text-top cursor-pointer ml-1 font-[300] text-base;
+  }
+}
