--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,51 +11,49 @@ html
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    / = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = stylesheet_link_tag "tailwind", "data-turbo-track": "reload"
     = javascript_importmap_tags
     = turbo_refresh_method_tag :morph
     = turbo_refresh_scroll_tag :preserve
   body
-    header
-      nav role="navigation" aria-label="main navigation"
-        ul 
-         li
-          - if Rails.env.staging? || Rails.env.development?
-            strong.danger StoreMate
-          - if Rails.env.production?
-            strong StoreMate
-        ul
+    header.container.mx-auto.pt-1
+      nav role="navigation-main"
+        ul role="navigation-logo"
+         li.text-gray-700
+          i.icn.text-2xl.not-italic.mr-2 😸
+          strong.align-text-bottom StoreMate
+        ul.text-sm.-mr-2
           - if current_user.guest?
             li = link_to "Log Out", log_out_path, method: :post, data: { confirm: "Are you sure you want to log out?", turbo_method: :post }
           - else
             li = link_to "Dashboard", root_path
-            nav
-              li = link_to "Debts", debts_path
-              li = link_to "Sales", sales_path
-              li = link_to "Purchases", purchases_path
-            nav  
-              li = link_to "Warehouses", warehouses_path
-              li = link_to "Products", products_path
+            .ml-4
+            li = link_to "Debts", debts_path
+            li = link_to "Sales", sales_path
+            li = link_to "Purchases", purchases_path
+            .ml-4
+            li = link_to "Warehouses", warehouses_path
+            li = link_to "Products", products_path
 
           - unless current_user.guest?
-            nav.dropdown role="navigation" aria-label="dropdown navigation"
-              .dropdown__btn
-                i.icn 🍔
-              ul.dropdown__content
+            nav.ml-4 role="navigation-dropdown" 
+              button aria-expanded="false"
+                i.icn.text-xl.not-italic 🍔 
+              ul
                 li = link_to "Customers", customers_path
                 li = link_to "Suppliers", suppliers_path
-                .pb-1
+                .pb-3
                 li = link_to "Brands", brands_path
                 li = link_to "Franchises", franchises_path
-                .pb-1
+                .pb-3
                 li = link_to "Versions", versions_path
                 li = link_to "Colors", colors_path
                 li = link_to "Shapes", shapes_path
                 li = link_to "Sizes", sizes_path
-                .pb-1
+                .pb-3
                 - if current_user.admin?
                   li = link_to "Users", users_path
                 li = link_to "Log Out", log_out_path, method: :post, data: { confirm: "Are you sure you want to log out?", turbo_method: :post }
-    main.main
+    main.container.mx-auto
       = yield
