feat: Style navigation headers

--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -1,7 +1,5 @@
-nav
-  ul
-    li
-      h1.classic Debts 
+header.mt-6
+  h1 Debts 
 
 main.wide.no-bd.flex.justify-between.flex-col.gap
   .table-card
