--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -11,6 +11,14 @@
       "Noto Emoji", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
       "Noto Color Emoji";
   }
+
+  a {
+    @apply inline-block font-medium no-underline px-2 py-2 rounded bg-gray-50 hover:bg-gray-100 border border-gray-100 transition-all duration-200;
+  }
+
+  th {
+    @apply text-slate-800;
+  }
 }
 
 /* Navigation */
@@ -27,11 +35,7 @@
 
   /* Style nav links as buttons on hover */
   nav[role="navigation-main"] a {
-    @apply inline-block px-2 py-2 rounded no-underline text-gray-600 transition-all duration-200;
-  }
-
-  nav[role="navigation-main"] a:is(:hover, :active, :focus) {
-    @apply no-underline hover:bg-gray-100 hover:text-gray-900;
+    @apply text-gray-700 hover:text-gray-900 border-0 bg-transparent hover:bg-gray-100;
   }
 
   nav[role="navigation-dropdown"] {
@@ -45,21 +49,44 @@
 
   /* Dropdown container */
   nav[role="navigation-dropdown"] ul {
-    @apply flex flex-col items-start absolute right-0 top-full w-44 pt-5 pl-4 pb-7 bg-white border border-gray-200 rounded-md shadow-md opacity-0 invisible transition-all duration-200;
+    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pl-4 pb-7 bg-white border border-gray-200 rounded-md shadow-md opacity-0 invisible transition-all duration-200;
   }
 
   nav[role="navigation-dropdown"]:hover ul {
     @apply opacity-100 visible;
   }
+}
 
-  nav[role="navigation-dropdown"] > ul > li > a {
-    @apply px-4 py-2 hover:bg-gray-100;
+/* Typography */
+@layer base {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-extrabold text-slate-800;
+  }
+  h1 {
+    @apply text-6xl text-slate-900;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5 {
+    @apply text-lg;
   }
 }
 
 @layer components {
   .icn {
-    @apply font-normal font-icn;
+    @apply font-normal font-icn not-italic;
   }
 
   .icn.is-link {
