--- a/app/views/_shared/_nav-index.html.slim
+++ b/app/views/_shared/_nav-index.html.slim
@@ -1,18 +1,16 @@
 - show_modal = false if local_assigns[:show_modal].nil?
 
-nav
-  ul
-    li
-      h1.classic = model.model_name.plural.capitalize
+header.flex.justify-between.items-center.mt-6
+  h1 = model.model_name.plural.capitalize
   - if Rails.application.routes.url_helpers.respond_to?("new_#{model.name.downcase}_path")
-    ul
+    menu.flex.pt-2
       - if show_modal
         li data-controller="modal-trigger"
           = link_to "#sync",
             data: { action: "click->modal-trigger#open" }
             i.icn 📥
-            | Sync
-      li
+            | Show Synchronization Menu
+      li.ml-3
         = link_to controller: "#{model.model_name.plural}", action: "new"
           i.icn 🐣
-          | New
+          | Add New Record
