--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -48,13 +48,22 @@
     @apply p-2 rounded hover:bg-gray-100 transition-all duration-200 cursor-pointer;
   }
 
+  nav[role="navigation-dropdown"]:hover > button {
+    @apply bg-gray-100;
+  }
+
   /* Dropdown container */
   nav[role="navigation-dropdown"] ul {
-    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pl-4 pb-7 bg-white border border-gray-200 rounded-md shadow-md opacity-0 invisible transition-all duration-200;
+    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-md shadow-md opacity-0 invisible transition-all duration-200;
   }
 
   nav[role="navigation-dropdown"]:hover ul {
     @apply opacity-100 visible;
+  }
+
+  nav[role="navigation-dropdown"] li,
+  nav[role="navigation-dropdown"] li a {
+    @apply w-full;
   }
 }
 
