--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -14,7 +14,7 @@
   }
 
   a {
-    @apply inline-block font-medium no-underline px-2 py-2 rounded bg-gray-50 hover:bg-gray-100 border border-gray-100 transition-all duration-200;
+    @apply inline-block font-medium no-underline px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-100 transition-all duration-200;
   }
 
   th {
@@ -45,7 +45,7 @@
 
   /* Burger button */
   nav[role="navigation-dropdown"] > button {
-    @apply p-2 rounded hover:bg-gray-100 transition-all duration-200 cursor-pointer;
+    @apply p-2 rounded-sm hover:bg-gray-100 transition-all duration-200 cursor-pointer;
   }
 
   nav[role="navigation-dropdown"]:hover > button {
@@ -54,7 +54,7 @@
 
   /* Dropdown container */
   nav[role="navigation-dropdown"] ul {
-    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-md shadow-md opacity-0 invisible transition-all duration-200;
+    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-sm shadow-md opacity-0 invisible transition-all duration-200;
   }
 
   nav[role="navigation-dropdown"]:hover ul {
@@ -101,5 +101,11 @@
 
   .icn.is-link {
     @apply align-text-top cursor-pointer ml-1 font-[300] text-base;
+  }
+}
+
+@layer components {
+  .main-section-border {
+    @apply border border-gray-200 rounded-xl;
   }
 }
