--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -13,8 +13,15 @@
     --font-sans: "Bricolage Grotesque", sans-serif;
   }
 
-  a {
-    @apply inline-block font-medium no-underline px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-100 transition-all duration-200;
+  :focus-visible {
+    @apply outline-dashed outline-2 outline-offset-2 outline-gray-300;
+  }
+
+  a,
+  input[type="submit"],
+  input[type="button"],
+  button {
+    @apply cursor-pointer inline-flex items-center justify-center gap-2 font-medium no-underline px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-200/50 transition-all duration-200;
   }
 
   th {
@@ -99,13 +106,48 @@
     @apply font-normal font-icn not-italic;
   }
 
-  .icn.is-link {
-    @apply align-text-top cursor-pointer ml-1 font-[300] text-base;
+  .btn-action {
+    @apply rounded-full px-3 border-gray-200/60;
   }
 }
 
 @layer components {
-  .main-section-border {
-    @apply border border-gray-200 rounded-xl;
+  .base-section-border {
+    @apply border border-gray-100 rounded-xl;
+  }
+
+  .search {
+    @apply px-10 py-8 flex justify-between;
+  }
+}
+
+/* Pagination */
+@layer components {
+  .pagination {
+    @apply flex justify-end items-center text-center min-w-md ml-8;
+  }
+
+  .pagination a {
+    @apply whitespace-nowrap ml-2;
+  }
+
+  .pagination-list {
+    @apply flex items-end;
+  }
+
+  .pagination-list li {
+    @apply flex justify-end min-w-10 max-w-fit;
+  }
+
+  .pagination-link {
+    @apply w-full;
+  }
+
+  .pagination-ellipsis {
+    @apply w-full block ml-2;
+  }
+
+  .pagination a.is-current {
+    @apply bg-gray-200 text-gray-500 cursor-not-allowed;
   }
 }
