--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -4,13 +4,13 @@ tr.hoverable id="#{dom_id product}" data-action="click->table#goTo" data-table-u
   td
     = product.full_title
     - if product.editions.present?
-      ul.v-align.ml-s.list-none
+      ul.ml-4.mt-2
         - product.editions.each do |edition|
-          li = edition.title
+          li.mt-1 = edition.title
   td = product.woo_id
   td = product.shopify_id_short
   td.actions
     = render "_shared/action-edit", route: edit_product_path(product)
     = link_to new_purchase_path(product:), {class: "no-events"}
       i.icn 💰
-      | Purchase
+      | Purchase
