--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@import "./navigation";
+@import "./tables";
+@import "./pagination";
+@import "./images";
 
 /* To rule them all */
 @layer base {
@@ -23,55 +27,6 @@
   button {
     @apply cursor-pointer inline-flex items-center justify-center gap-2 font-medium no-underline px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-200/50 transition-all duration-200;
   }
-
-  th {
-    @apply text-slate-800;
-  }
-}
-
-/* Navigation */
-@layer base {
-  nav[role="navigation-main"],
-  nav[role="navigation-main"] ul {
-    @apply flex items-center;
-  }
-
-  /* Align apart logo and menu */
-  nav[role="navigation-main"] {
-    @apply justify-between;
-  }
-
-  /* Style nav links as buttons on hover */
-  nav[role="navigation-main"] a {
-    @apply text-gray-700 hover:text-gray-900 border-0 bg-transparent hover:bg-gray-100;
-  }
-
-  nav[role="navigation-dropdown"] {
-    @apply relative;
-  }
-
-  /* Burger button */
-  nav[role="navigation-dropdown"] > button {
-    @apply p-2 rounded-sm hover:bg-gray-100 transition-all duration-200 cursor-pointer;
-  }
-
-  nav[role="navigation-dropdown"]:hover > button {
-    @apply bg-gray-100;
-  }
-
-  /* Dropdown container */
-  nav[role="navigation-dropdown"] ul {
-    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-sm shadow-md opacity-0 invisible transition-all duration-200;
-  }
-
-  nav[role="navigation-dropdown"]:hover ul {
-    @apply opacity-100 visible;
-  }
-
-  nav[role="navigation-dropdown"] li,
-  nav[role="navigation-dropdown"] li a {
-    @apply w-full;
-  }
 }
 
 /* Typography */
@@ -82,10 +37,10 @@
   h4,
   h5,
   h6 {
-    @apply font-extrabold text-slate-800;
+    @apply font-extrabold text-gray-800;
   }
   h1 {
-    @apply text-6xl text-slate-900;
+    @apply text-6xl text-gray-900;
   }
   h2 {
     @apply text-3xl;
@@ -114,40 +69,5 @@
 @layer components {
   .base-section-border {
     @apply border border-gray-100 rounded-xl;
-  }
-
-  .search {
-    @apply px-10 py-8 flex justify-between;
-  }
-}
-
-/* Pagination */
-@layer components {
-  .pagination {
-    @apply flex justify-end items-center text-center min-w-md ml-8;
-  }
-
-  .pagination a {
-    @apply whitespace-nowrap ml-2;
-  }
-
-  .pagination-list {
-    @apply flex items-end;
-  }
-
-  .pagination-list li {
-    @apply flex justify-end min-w-10 max-w-fit;
-  }
-
-  .pagination-link {
-    @apply w-full;
-  }
-
-  .pagination-ellipsis {
-    @apply w-full block ml-2;
-  }
-
-  .pagination a.is-current {
-    @apply bg-gray-200 text-gray-500 cursor-not-allowed;
   }
 }
