--- a/app/views/_shared/_search-results-empty.html.slim
+++ b/app/views/_shared/_search-results-empty.html.slim
@@ -1,3 +1,3 @@
-.search-results--empty.flex.flex-col.justify-center.items-center
-  i.icn.xxl = ["👻","👽","💩"].sample
+.search-results--empty.flex.flex-col.justify-center.items-center.h-100
+  i.icn class="text-[180px]" = ["👻","👽","💩", "🪆", "🎭"].sample
   h2.text-center Nothing found
